Refactor code with SonarLint